test/sema/struct_cycle.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
struct Color {
// CHECK: [[# @LINE - 1 ]]:1: error: struct 'Color' contains itself
  r: i32,
  g: i32,
  b: i32,
  c: Color,
}

fn main() -> void {}
